--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@astrojs/sitemap": "^3.4.1",
     "@astrojs/tailwind": "^6.0.0",
     "@lucide/astro": "^0.513.0",
+    "@nanostores/react": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.1.1",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
@@ -31,6 +34,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-query": "^5.80.6",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.14.6",
     "@types/react": "^18.3.3",
@@ -41,22 +45,33 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
+    "nanostores": "^1.0.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.55"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "eslint": "^9.28.0",
+    "eslint-plugin-astro": "^1.3.1",
     "lightningcss": "^1.30.1",
+    "msw": "^2.10.1",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "terser": "^5.41.0",
     "tw-animate-css": "^1.3.2",
-    "vite-plugin-mkcert": "^1.17.8"
+    "vite-plugin-mkcert": "^1.17.8",
+    "vitest": "^3.2.2"
   },
   "packageManager": "pnpm@8.15.4"
 }
