--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.1",
     "@astrojs/tailwind": "^6.0.0",
+    "@fontsource-variable/inter": "^5.2.6",
     "@lucide/astro": "^0.513.0",
     "@nanostores/react": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -31,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@sentry/browser": "^7.107.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
@@ -45,6 +47,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "idb": "^7.1.1",
     "lucide-react": "^0.482.0",
     "nanostores": "^1.0.1",
     "postcss": "^8.4.38",
@@ -55,6 +58,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.25.55"
   },
   "devDependencies": {
@@ -63,14 +67,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "lightningcss": "^1.30.1",
     "msw": "^2.10.1",
     "postcss-import": "^16.1.0",
@@ -82,5 +79,10 @@
     "vite-plugin-mkcert": "^1.17.8",
     "vitest": "^3.2.2"
   },
-  "packageManager": "pnpm@8.15.4"
+  "packageManager": "pnpm@8.15.4",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
