--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@astrojs/sitemap": "^3.4.1",
     "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/inter": "^5.2.6",
+    "@fontsource/jetbrains-mono": "^5.2.6",
+    "@fontsource/poppins": "^5.2.6",
+    "@heroicons/react": "^2.2.0",
     "@lucide/astro": "^0.513.0",
     "@nanostores/react": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -47,6 +50,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "heroicons": "^2.2.0",
     "idb": "^7.1.1",
     "lucide-react": "^0.482.0",
     "nanostores": "^1.0.1",
