--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix",
     "typecheck": "tsc --noEmit",
-    "check": "run-s typecheck lint"
+    "check": "run-s typecheck lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.1",
@@ -41,10 +46,12 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.14.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "astro": "^5.8.1",
     "autoprefixer": "^10.4.19",
     "canvas-confetti": "^1.9.3",
@@ -62,6 +69,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.3",
     "uuid": "^9.0.1",
     "zod": "^3.25.55"
   },
@@ -71,9 +79,13 @@
     "@testing-library/user-event": "^14.6.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "@vitest/coverage-v8": "^3.2.2",
+    "@vitest/ui": "^3.2.2",
     "eslint-plugin-astro": "^1.3.1",
+    "jsdom": "^24.0.0",
     "lightningcss": "^1.30.1",
     "msw": "^2.10.1",
+    "npm-run-all": "^4.1.5",
     "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
