--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "uuid": "^9.0.1",
-    "zod": "^3.25.55"
+    "zod": "^3.25.55",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
