--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/react": "^4.3.0",
+    "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
     "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/inter": "^5.2.6",
