--- a/package.json
+++ b/package.json
@@ -84,9 +84,11 @@
     "@vitest/coverage-v8": "^3.2.2",
     "@vitest/ui": "^3.2.2",
     "eslint-plugin-astro": "^1.3.1",
+    "formdata-node": "^6.0.3",
     "jsdom": "^24.0.0",
     "lightningcss": "^1.30.1",
     "msw": "^2.10.1",
+    "node-fetch": "3",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
