--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@typescript-eslint/parser": "^7.0.0",
     "@vitest/coverage-v8": "^3.2.2",
     "@vitest/ui": "^3.2.2",
+    "dotenv": "^17.0.0",
     "eslint-plugin-astro": "^1.3.1",
     "formdata-node": "^6.0.3",
     "jsdom": "^24.0.0",
@@ -96,6 +97,7 @@
     "prettier-plugin-tailwindcss": "^0.5.12",
     "terser": "^5.41.0",
     "tw-animate-css": "^1.3.2",
+    "vite": "7",
     "vite-plugin-mkcert": "^1.17.8",
     "vitest": "^3.2.2"
   },
