--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
+    "react-is": "18",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
