--- a/package.json
+++ b/package.json
@@ -47,17 +47,12 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
-    "@types/canvas-confetti": "^1.9.0",
-    "@types/node": "^20.14.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
     "astro": "^5.8.1",
     "autoprefixer": "^10.4.19",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.0",
     "heroicons": "^2.2.0",
     "idb": "^7.1.1",
     "lucide-react": "^0.482.0",
@@ -73,10 +68,10 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "uuid": "^9.0.1",
-    "zod": "^3.25.55",
-    "zustand": "^5.0.5"
+    "zod": "^3.25.55"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
@@ -84,7 +79,6 @@
     "@typescript-eslint/parser": "^7.0.0",
     "@vitest/coverage-v8": "^3.2.2",
     "@vitest/ui": "^3.2.2",
-    "dotenv": "^17.0.0",
     "eslint-plugin-astro": "^1.3.1",
     "formdata-node": "^6.0.3",
     "jsdom": "^24.0.0",
