--- a/package.json
+++ b/package.json
@@ -71,15 +71,17 @@
     "zod": "^3.25.55"
   },
   "devDependencies": {
-    "dotenv": "^17.0.0",
-    
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.8",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitest/coverage-v8": "^3.2.2",
     "@vitest/ui": "^3.2.2",
+    "dotenv": "^17.0.0",
     "eslint-plugin-astro": "^1.3.1",
     "formdata-node": "^6.0.3",
     "jsdom": "^24.0.0",
