--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "jsdom": "^24.0.0",
     "lightningcss": "^1.30.1",
     "msw": "^2.10.1",
-    "node-fetch": "3",
+    "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
